Update PodCast “日記”

--- a/src/pages/podcasts/日記.md
+++ b/src/pages/podcasts/日記.md
@@ -4,6 +4,6 @@ channel: test
 title: 日記
 date: 2020-02-08T15:23:36.488Z
 slug: nikki
-description: 試しに日記
+description: 試しに日記を書いてみる
 ---
 今日は都市間に行きました
