Update PodCast “今日の私”

--- a/src/pages/podcasts/今日の私.md
+++ b/src/pages/podcasts/今日の私.md
@@ -14,7 +14,7 @@ description: 今日も色々ありましたな
 
 もう、フロントエンドとしてガッツリ参画するのは、これで最後だろう、というプロジェクトではあるのだけど、ここ一年で有能な社員とアルバイトが入ってきたので、全く心配していない。
 
-というか、最近はマネージャーという責務がのしかかっていて、そんなにコーディングに集中もできておらず、動きの速い界隈の手法や手段について、もはや追いかける時間もない。
+というか、最近は**マネージャーという責務**がのしかかっていて、そんなにコーディングに集中もできておらず、動きの速い界隈の手法や手段について、もはや追いかける時間もない。
 
 スキルの高いメンバーは見ていて気持ちがいいし、マネージャーはそれはそれで興味深くて楽しくなりつつある。
 
@@ -25,7 +25,7 @@ description: 今日も色々ありましたな
 休日なのにゴロゴロ社員が出社しているという異様な光景なのだけど、時折交わす雑談が、なかなか深い。
 
 違和感を感じながらも、実装に奔走するエンジニア。\
-あらためて、目的が共有され、咀嚼されていない事に気づく。
+あらためて、**目的が共有され、咀嚼されていない事に**気づく。
 
 デザイナーとて、マーケティングやセールスをも範疇にしない限り、そのビジネスプランが妥当かどうかという判断は放棄せざるおえないわけで、プロダクトオーナーが指し示す方向性に、全幅の信頼を寄せるしかない。
 
@@ -33,7 +33,7 @@ description: 今日も色々ありましたな
 それもデザインであるのだ。
 
 同時に、本来のデザインの対象は、関わる人すべてである。\
-マーケティングやセールスといった隣接のチームとの協業範囲を広げ、デザイン的アプローチで課題を解決するチームとなりたい。
+マーケティングやセールスといった隣接のチームとの協業範囲を広げ、**デザイン的アプローチで課題を解決するチーム**となりたい。
 
 ## 明日は
 
