--- a/src/pages/podcasts/スクラム勉強会1.md
+++ b/src/pages/podcasts/スクラム勉強会1.md
@@ -1,11 +1,11 @@
 ---
 templateKey: PodCast
 channel: test
-title: スクラム勉強会 1
+title: スクラム勉強会
 date: 2020-02-21T04:16:13.822Z
 slug: scrum1
 description: |
-  スクラム勉強会 1
+  スクラム勉強会
 ---
 ## なぜプロダクト開発は失敗するのか
 
@@ -23,3 +23,110 @@ description: |
 ## プロダクトの開発は本質的に困難
 
 プロダクトが多様化する中ではじめから予測や計画を立てることなど無意味。 ソフトウェアは目に見えないからこそ、コミュニケーションによってお互いにおぼろげな輪郭を形成していく。そのため、ビジョンやコンセプトが明確でないと、全員が本質的な目的を忘れてしまい、個別最適で本質的ではない目的を掲げてしまう。
+
+## MVPとは
+
+仮説検証するために、検証に必要な最小限の単位で着手するということか？
+
+以前はプロトタイピングで行われていた仮説検証か。 より小さい単位でスピーディーに検証を行うためか。
+
+## アジャイル開発の実践
+
+* 軽量
+* 理解が容易
+* 習得は困難
+
+### スクラムチーム
+
+スクラムチームは、プロダクトの価値を最大限高めるための自己組織化されたチーム
+
+* プロダクトオーナー
+* 開発チーム
+* スクラムマスタースクラムチーム
+
+### スクラムイベント
+
+スクラムで規定されたイベントは規則性を作り出し、スクラムで定義されていないミーティングの必要性を最小化する。すべてのイベントは、**時間に上限のあるタイムボックス化されたイベント**である。スプリントを開始すると、**その期間は固定され**、増減することはできない。スクラムイベントを通じて**高い透明性**を確保し、**検査と適応で変化に対応**する。
+
+* スプリント
+* スプリントゼロ
+* スプリントプランニング
+* デイリースクラム
+* スプリントレビュー
+* スプリントレトロスペクティブ
+
+#### スプリント
+
+スクラムの中心は**スプリント**である。 
+
+これは完成した、リリース判断可能な**成果物**を作るための**1 か月以下**のタイムボックスである。開発中はスプリントの長さは常に一定である。
+
+スプリントが終了すると、すぐに新しいスプリントが開始される。
+
+#### スプリントゼロ
+
+開発の前段階での準備として、**スプリントゼロ**と呼ぶことがある。
+
+スクラムを開始するより前に、無駄なサービスや機能を作らないように、**ビジネスモデルの仮設**を立て、プロダクトを作る**理由や実現方法**を明確にしておく。そうすることで、スクラムチームは協力的に仕事に取り組むことができる。
+
+また、見込み顧客とスクラムメンバーとの対話を深める道具として**リーンキャンバス**を用いることがある。
+
+#### スプリントプランニング
+
+#### デイリースクラム
+
+1日に1回15分間、進捗や予定、問題の共有を行う。
+
+スプリントゴールが達成できそうか、妨げる原因はなにかを明らかにする。毎日15分実施することが目的ではなく、チームでの意思疎通が円滑に行える状態にすることが目的。
+
+#### スプリントレビュー
+
+スプリント期間中に作成したリリース判断可能なプロダクトである**成果物**の確認を行い、フィードバックを得る。
+
+スプリント期間が1ヶ月であれば4時間、1週間であれば1時間が目安。
+
+#### スプリントレトロスペクティブ
+
+スクラムチームが自分たちの現状を見直し、次回以降の仕事の進め方を改善する。
+
+スプリント期間が1ヶ月であれば3時間、1週間であれば0.5−1時間が目安。
+
+### スクラムの生成物
+
+スクラムの作成物は、スクラムイベントを通して、生成されたアウトプットのことを指し、透明性が高く、誰もがいつでも触れられる機会を提供するものである。
+
+* プロダクトバックログ
+* スプリントバックログ
+* インクリメント
+
+#### プロダクトバックログ
+
+プロダクトで実現したいものを優先順位をつけて一覧化したものである。プロダクトに対する変更要求の唯一の情報源であり、プロダクトオーナーは、プロダクトバックログの内容・可用性・並び順に責任を持つ。
+
+#### スプリントバックログ
+
+スプリント期間内で行うと判断したプロダクトバックログアイテムと、それらのアイテムを実現するためのタスクを一覧化したものである。開発チームが、その内容に責任を持つ。
+
+#### インクリメント
+
+開発チームがスプリントごとに生成するリリース判断可能で利用可能なプロダクトである。完成の定義を満たしていなければ、インクリメントとは呼ばない。開発チームは、完成の定義を満たしたインクリメントを期間内に作成し、プロダクトオーナーにレビューしてもらう必要がある。
+
+## 質疑応答
+
+> 役割と越境について、どこまでやるか判断に迷う 抽象度が高い部分は、共有、共同するべきか。
+>
+> 専門性も大事にしなくてはいけない。\
+> 共有することは作業ではなく、目的である。
+>
+> 越境などで共通認識を持つなどのとき、コミュニケーションコストでデメリットはないか？
+>
+> フェーズとして考える時間を設けられるタイミングである。会社として大きくなると文化として変えづらい状況になる。
+>
+> 今の組織はアジャイルになっているか？ 
+>
+> 中途半端なアジャイルになっている。
+>
+> スクラムはなぜ習得が困難か？
+>
+> コミュニケーションとその仕組みを作るコストがかけられない。\
+> 仕組みとはツールではない
