Update PodCast “オルタード・カーボン：ネタばれ”

--- a/src/pages/podcasts/オルタード・カーボン：ネタばれ.md
+++ b/src/pages/podcasts/オルタード・カーボン：ネタばれ.md
@@ -3,7 +3,7 @@ templateKey: PodCast
 channel: test
 title: オルタード・カーボン：ネタばれ
 date: 2020-03-22T13:53:45.666Z
-slug: 2020/03/22
+slug: 20200322-ac
 description: いちおうシーズン1に続き、シーズン2も見て、アニメまで見たのだけど、ちょっと消化不足なのでストーリーおさらい。
 ---
 ## シーズン1：前半
